2011-09-27  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java
		(handleModelData): Add -g flag for debug information.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/ModelDataAdapter.java:
		Stop using addr2line to determine file/line information and use the
		data collected from opreport instead.

2011-09-26  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/ModelDataAdapter.java:
		Provide file paths for each sample and the line number for each symbol.
	* src/org/eclipse/linuxtools/oprofile/core/model/OpModelSample.java:
	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/SamplesProcessor.java:
		Save the file path corresponding to each sample.
	* src/org/eclipse/linuxtools/oprofile/core/model/OpModelSymbol.java:
	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/SymbolsProcessor.java:
		Save the line number for each symbol.

2011-09-21  Roland Grunberg  <rgrunber@redhat.com>

	* build.properties: Remove non-existant schema folder.

2011-09-20  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/InfoAdapter.java:
	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/EventListProcessor.java:
		Do not create an element for the event id.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/checkevent/CheckEventsProcessor.java:
		Remove the invalid event error.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/checkevent/CheckEventAdapter.java:
		Remove any methods related to the event id and instead use the
		event name to refer to an event.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/EventIdCache.java:
		Remove any methods related to the event id but instead add a
		method to map the event name to it's corresponding info node.
	* src/org/eclipse/linuxtools/oprofile/core/daemon/OpEvent.java:
		Remove event id related methods/fields.